--- a/GestionIPS.Backend/Views/Eventos_Programacion/ReportexAgente.cshtml
+++ b/GestionIPS.Backend/Views/Eventos_Programacion/ReportexAgente.cshtml
@@ -17,10 +17,10 @@
     <link href="~/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Page level plugin CSS-->
     <link href="~/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-    
+
     <!-- Custom styles for this template-->
-    <link href="~/css/sb-admin.css" rel="stylesheet">    
-    
+    <link href="~/css/sb-admin.css" rel="stylesheet">
+
     <!-- DatetimePicker-->
     <link href="~/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 
@@ -96,9 +96,8 @@
                     <span>Pages</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <h6 class="dropdown-header">Inicio:</h6>
-                    <a class="dropdown-item" href="/Eventos_Programacion/Principal">Principal</a>
                     <h6 class="dropdown-header">Médico:</h6>
+                    <!--<a class="dropdown-item" href="login.html">Agenda Médico</a>-->
                     <a class="dropdown-item" href="/Eventos_Programacion/Index">Agenda Médica</a>
                     <a class="dropdown-item" href="register.html">Register</a>
                     <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
@@ -109,22 +108,16 @@
 
 
 
-                    <a class="dropdown-item" href="register.html"></a>
+                    <a class="dropdown-item" href="register.html">Register</a>
 
                     <a class="dropdown-item" href="blank.html">Blank Page</a>
                 </div>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Gráficas</span>
+            <li class="nav-item">
+                <a class="nav-link" href="charts.html">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Charts</span>
                 </a>
-                <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <h6 class="dropdown-header">Charts</h6>
-                    <!--<a class="dropdown-item" href="login.html">Agenda Médico</a>-->
-                    <a class="dropdown-item" href="/Eventos_Programacion/ChartAgend">Gráfica Agenda</a>
-                    <a class="dropdown-item" href="/Eventos_Programacion/ChartServicios">Gráfica Servicios</a>
-                </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
@@ -143,73 +136,83 @@
                     <li class="breadcrumb-item active">Overview</li>
                 </ol>
                 <!-- Icon Cards
-    <div class="row">
-        <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-primary o-hidden h-100">
-                <div class="card-body">
-                    <div class="card-body-icon">
-                        <i class="fas fa-fw fa-comments"></i>
+                <div class="row">
+                    <div class="col-xl-3 col-sm-6 mb-3">
+                        <div class="card text-white bg-primary o-hidden h-100">
+                            <div class="card-body">
+                                <div class="card-body-icon">
+                                    <i class="fas fa-fw fa-comments"></i>
+                                </div>
+                                <div class="mr-5">26 New Messages!</div>
+                            </div>
+                            <a class="card-footer text-white clearfix small z-1" href="#">
+                                <span class="float-left">View Details</span>
+                                <span class="float-right">
+                                    <i class="fas fa-angle-right"></i>
+                                </span>
+                            </a>
+                        </div>
                     </div>
-                    <div class="mr-5">26 New Messages!</div>
-                </div>
-                <a class="card-footer text-white clearfix small z-1" href="#">
-                    <span class="float-left">View Details</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
-            </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-warning o-hidden h-100">
-                <div class="card-body">
-                    <div class="card-body-icon">
-                        <i class="fas fa-fw fa-list"></i>
+                    <div class="col-xl-3 col-sm-6 mb-3">
+                        <div class="card text-white bg-warning o-hidden h-100">
+                            <div class="card-body">
+                                <div class="card-body-icon">
+                                    <i class="fas fa-fw fa-list"></i>
+                                </div>
+                                <div class="mr-5">11 New Tasks!</div>
+                            </div>
+                            <a class="card-footer text-white clearfix small z-1" href="#">
+                                <span class="float-left">View Details</span>
+                                <span class="float-right">
+                                    <i class="fas fa-angle-right"></i>
+                                </span>
+                            </a>
+                        </div>
                     </div>
-                    <div class="mr-5">11 New Tasks!</div>
-                </div>
-                <a class="card-footer text-white clearfix small z-1" href="#">
-                    <span class="float-left">View Details</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
-            </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-success o-hidden h-100">
-                <div class="card-body">
-                    <div class="card-body-icon">
-                        <i class="fas fa-fw fa-shopping-cart"></i>
+                    <div class="col-xl-3 col-sm-6 mb-3">
+                        <div class="card text-white bg-success o-hidden h-100">
+                            <div class="card-body">
+                                <div class="card-body-icon">
+                                    <i class="fas fa-fw fa-shopping-cart"></i>
+                                </div>
+                                <div class="mr-5">123 New Orders!</div>
+                            </div>
+                            <a class="card-footer text-white clearfix small z-1" href="#">
+                                <span class="float-left">View Details</span>
+                                <span class="float-right">
+                                    <i class="fas fa-angle-right"></i>
+                                </span>
+                            </a>
+                        </div>
                     </div>
-                    <div class="mr-5">123 New Orders!</div>
-                </div>
-                <a class="card-footer text-white clearfix small z-1" href="#">
-                    <span class="float-left">View Details</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
-            </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-danger o-hidden h-100">
-                <div class="card-body">
-                    <div class="card-body-icon">
-                        <i class="fas fa-fw fa-life-ring"></i>
+                    <div class="col-xl-3 col-sm-6 mb-3">
+                        <div class="card text-white bg-danger o-hidden h-100">
+                            <div class="card-body">
+                                <div class="card-body-icon">
+                                    <i class="fas fa-fw fa-life-ring"></i>
+                                </div>
+                                <div class="mr-5">13 New Tickets!</div>
+                            </div>
+                            <a class="card-footer text-white clearfix small z-1" href="#">
+                                <span class="float-left">View Details</span>
+                                <span class="float-right">
+                                    <i class="fas fa-angle-right"></i>
+                                </span>
+                            </a>
+                        </div>
                     </div>
-                    <div class="mr-5">13 New Tickets!</div>
-                </div>
-                <a class="card-footer text-white clearfix small z-1" href="#">
-                    <span class="float-left">View Details</span>
-                    <span class="float-right">
-                        <i class="fas fa-angle-right"></i>
-                    </span>
-                </a>
-            </div>
-        </div>
-    </div>-->
-                
+                </div>-->
+                <!-- Area Chart Example
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <i class="fas fa-chart-area"></i>
+                        Area Chart Example
+                    </div>
+                    <div class="card-body">
+                        <canvas id="myAreaChart" width="100%" height="30"></canvas>
+                    </div>
+                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                </div>-->
                 <!-- DataTables Example -->
                 <div class="card mb-3">
                     <div class="card-header">
@@ -229,9 +232,9 @@
                             </div>
                             <div>&nbsp;</div>
                             <div class="form-group">
-                                <label class="sr-only" for="ejemplo_email_2">Código Médico</label>
-                                <input type="text" id="codigomedico" class="form-control"
-                                       placeholder="Introduce código médico">
+                                <label class="sr-only" for="ejemplo_email_2">Código Agente</label>
+                                <input type="text" id="codigoagente" class="form-control"
+                                       placeholder="Introduce código Agente">
                             </div>
 
                             <div>&nbsp;</div>
@@ -290,8 +293,8 @@
                                 </div>
                                 <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                                 <!--<div id="loading">
-                        <img src="~/images/cargando.png" />"
-                    </div>-->
+                                    <img src="~/images/cargando.png" />"
+                                </div>-->
                             </div>
                         </div>
                     </div>
@@ -349,9 +352,9 @@
         <!-- Page level plugin JavaScript-->
         <script src="~/vendor/chart.js/Chart.min.js"></script>
 
-        
+
         <!--<script src="~/vendor/datatables/jquery.dataTables.js"></script>
-    <script src="~/vendor/datatables/dataTables.bootstrap4.js"></script>-->
+        <script src="~/vendor/datatables/dataTables.bootstrap4.js"></script>-->
 
         <script src="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"></script>
         <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
@@ -361,44 +364,19 @@
         <!-- Demo scripts for this page-->
         <!--<script src="~/js/bootstrap-datetimepicker.min.js"></script>-->
         <!--<script src="~/js/demo/datatables-demo.js"></script>
-    <script src="~/js/demo/chart-area-demo.js"></script>-->
+        <script src="~/js/demo/chart-area-demo.js"></script>-->
 
         <script src="~/Scripts/main.js"></script>
 
 
         <script type="text/javascript">
-            $(document).ready(function () {                
-                $("#buscar").click(function () {   
+            $(document).ready(function () {
+                $("#buscar").click(function () {
                     //$('#content').html('<div class="loading"><img src="~/images/cargando.png" /><br/>Un momento, por favor...</div>');
-                    //ListaEventoMedicoFecha();
-                    ListaEventoMedicoFecha();
-                    ListarInasistenteFecha();
+                    ListaEventoAgenteFecha();
                 });
 
             });
-
-
-            /*new Chart(document.getElementById("myAreaChart"), {
-                type: 'bar',
-                data: {
-                    labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
-                    datasets: [
-                        {
-                            label: "Population (millions)",
-                            backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850"],
-                            data: [2478, 5267, 734, 784, 433]
-                        }
-                    ]
-                },
-                options: {
-                    legend: { display: false },
-                    title: {
-                        display: true,
-                        text: 'Predicted world population (millions) in 2050'
-                    }
-                }
-            });*/
-
         </script>
 
 </body>
