--- a/GestionIPS.Backend/Views/Eventos_Programacion/ChartAgend.cshtml
+++ b/GestionIPS.Backend/Views/Eventos_Programacion/ChartAgend.cshtml
@@ -18,6 +18,9 @@
     <!-- Page level plugin CSS-->
     <link href="~/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
+    <!-- CDN PASARLO PARA ACA SOLUCIONA EL PROBLEMA DE PAGINACION-->
+    <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet">
+
     <!-- Custom styles for this template-->
     <link href="~/css/sb-admin.css" rel="stylesheet">
 
@@ -27,7 +30,7 @@
 </head>
 <body id="page-top">
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-        <a class="navbar-brand mr-1" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand mr-1" href="index.html">BI-HMI</a>
         <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
         </button>
@@ -85,39 +88,35 @@
         <!-- Sidebar -->
         <ul class="sidebar navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span>
+                <a class="nav-link" href="/Eventos_Programacion/Principal" role="button" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-fw fa-chart-line"></i>
+                    <span>Inicio</span>
                 </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Tablas</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    
                     <h6 class="dropdown-header">Médico:</h6>
                     <!--<a class="dropdown-item" href="login.html">Agenda Médico</a>-->
 
                     <a class="dropdown-item" href="/Eventos_Programacion/Index">Agenda Médica</a>
-                    <a class="dropdown-item" href="register.html">Register</a>
-                    <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
                     <div class="dropdown-divider"></div>
                     <h6 class="dropdown-header">Call Center:</h6>
                     <a class="dropdown-item" href="/Eventos_Programacion/ReportexAgente">Reporte de Agente</a>
-                    <a class="dropdown-item" href="/Eventos_Programacion/ReportexAgente">Reporte Inasistente</a>
+                    <a class="dropdown-item" href="/Eventos_Programacion/ReportexInasistente">Reporte Inasistente</a>
 
 
 
-                    <a class="dropdown-item" href="register.html"></a>
-
-                    <a class="dropdown-item" href="blank.html">Blank Page</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Análisis</span>
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Agenda</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
                     <h6 class="dropdown-header">Charts</h6>
@@ -126,12 +125,25 @@
                     <a class="dropdown-item" href="/Eventos_Programacion/ChartServicios">Gráfica Servicios</a>
                 </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Admisión</span>
                 </a>
+                <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <h6 class="dropdown-header">Gráficas</h6>
+                    <!--<a class="dropdown-item" href="login.html">Agenda Médico</a>-->
+                    <a class="dropdown-item" href="/Eventos_Programacion/ChartAdmision">Gráfica Admisión</a>
+                    <a class="dropdown-item" href="/Eventos_Programacion/ChartServicios">Gráfica Admisión Servicios</a>
+                </div>
             </li>
+            <!--<li class="nav-item">
+        <a class="nav-link" href="tables.html">
+            <i class="fas fa-fw fa-table"></i>
+            <span>Tables</span>
+        </a>
+    </li>-->
         </ul>
         <div id="content-wrapper">
             <div class="container-fluid">
@@ -305,7 +317,7 @@
     <!--<script src="~/vendor/datatables/jquery.dataTables.js"></script>
     <script src="~/vendor/datatables/dataTables.bootstrap4.js"></script>-->
 
-    <script src="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"></script>
+   
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
     <!-- Custom scripts for all pages-->
