--- a/GestionIPS.Backend/Views/Eventos_Programacion/ChartServicios.cshtml
+++ b/GestionIPS.Backend/Views/Eventos_Programacion/ChartServicios.cshtml
@@ -18,6 +18,9 @@
     <!-- Page level plugin CSS-->
     <link href="~/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
+    <!-- CDN PASARLO PARA ACA SOLUCIONA EL PROBLEMA DE PAGINACION-->
+    <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet">
+
     <!-- Custom styles for this template-->
     <link href="~/css/sb-admin.css" rel="stylesheet">
 
@@ -27,7 +30,7 @@
 </head>
 <body id="page-top">
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-        <a class="navbar-brand mr-1" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand mr-1" href="index.html">BI-HMI</a>
         <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
         </button>
@@ -85,17 +88,19 @@
         <!-- Sidebar -->
         <ul class="sidebar navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span>
+                <a class="nav-link" href="/Eventos_Programacion/Principal" role="button" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-fw fa-chart-line"></i>
+                    <span>Inicio</span>
                 </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Tablas</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <h6 class="dropdown-header">Inicio:</h6>
+                    <a class="dropdown-item" href="/Eventos_Programacion/Principal">Principal</a>
                     <h6 class="dropdown-header">Médico:</h6>
                     <!--<a class="dropdown-item" href="login.html">Agenda Médico</a>-->
 
@@ -105,27 +110,36 @@
                     <div class="dropdown-divider"></div>
                     <h6 class="dropdown-header">Call Center:</h6>
                     <a class="dropdown-item" href="/Eventos_Programacion/ReportexAgente">Reporte de Agente</a>
-                    <a class="dropdown-item" href="/Eventos_Programacion/ReportexAgente">Reporte Inasistente</a>
+                    <a class="dropdown-item" href="/Eventos_Programacion/ReportexInasistente">Reporte Inasistente</a>
 
-
-
-                    <a class="dropdown-item" href="register.html"></a>
-
-                    <a class="dropdown-item" href="blank.html">Blank Page</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Análisis</span>
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Agenda</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <h6 class="dropdown-header">Charts</h6>
+                    <h6 class="dropdown-header">Gráficas</h6>
                     <!--<a class="dropdown-item" href="login.html">Agenda Médico</a>-->
                     <a class="dropdown-item" href="/Eventos_Programacion/ChartAgend">Gráfica Agenda</a>
                     <a class="dropdown-item" href="/Eventos_Programacion/ChartServicios">Gráfica Servicios</a>
                 </div>
             </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Admisión</span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <h6 class="dropdown-header">Gráficas</h6>
+                    <!--<a class="dropdown-item" href="login.html">Agenda Médico</a>-->
+                    <a class="dropdown-item" href="/Eventos_Programacion/ChartAdmision">Gráfica Admisión</a>
+                    <a class="dropdown-item" href="/Eventos_Programacion/ChartServicios">Gráfica Admisión Servicios</a>
+                </div>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
@@ -142,110 +156,123 @@
                     </li>
                     <li class="breadcrumb-item active">Overview</li>
                 </ol>
+                <div class="card-body">
+                    <form class="form-inline" role="form">
+                        <div class="form-group">
+                            <label class="sr-only" for="ejemplo_email_2">Fecha Inicial</label>
+                            <input placeholder="Fecha Inicial" class="form-control" type="text" onfocus="(this.type='date')" id="fechaini">
+                        </div>
+                        <div>&nbsp;</div>
+                        <div class="form-group">
+                            <label class="sr-only" for="ejemplo_password_2">Fecha Final</label>
+                            <input placeholder="Fecha Final" class="form-control" type="text" onfocus="(this.type='date')" id="fechafin">
+                        </div>
+                        <div>&nbsp;</div>                        
 
-                <!--<div class="form-group">
-                    <label class="sr-only" for="ejemplo_email_2">Fecha Inicial</label>
-                    <input placeholder="Fecha Inicial" class="form-control" type="text" onfocus="(this.type='date')" id="fechaini">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="ejemplo_password_2">Fecha Final</label>
-                    <input placeholder="Fecha Final" class="form-control" type="text" onfocus="(this.type='date')" id="fechafin">
-                </div>-->
-                <!-- Icon Cards
-                <div class="row">
-                    <div class="col-xl-3 col-sm-6 mb-3">
-                        <div class="card text-white bg-primary o-hidden h-100">
-                            <div class="card-body">
-                                <div class="card-body-icon">
-                                    <i class="fas fa-fw fa-comments"></i>
-                                </div>
-                                <div class="mr-5">26 New Messages!</div>
-                            </div>
-                            <a class="card-footer text-white clearfix small z-1" href="#">
-                                <span class="float-left">View Details</span>
-                                <span class="float-right">
-                                    <i class="fas fa-angle-right"></i>
-                                </span>
-                            </a>
+                        <div>&nbsp;</div>
+                        <div class="form-group">
+
+                            <button id="buscar" type="button" class="btn btn-info js-validform" aria-label="Left Align">
+                                <span style="font-size: 18px" class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
+                            </button>
+
                         </div>
+
+
+                    </form>
+                    <div>&nbsp;</div>
+                    <div id="loading" style="display:none; text-align: center;">
+                        <br />
                     </div>
-                    <div class="col-xl-3 col-sm-6 mb-3">
-                        <div class="card text-white bg-warning o-hidden h-100">
-                            <div class="card-body">
-                                <div class="card-body-icon">
-                                    <i class="fas fa-fw fa-list"></i>
-                                </div>
-                                <div class="mr-5">11 New Tasks!</div>
-                            </div>
-                            <a class="card-footer text-white clearfix small z-1" href="#">
-                                <span class="float-left">View Details</span>
-                                <span class="float-right">
-                                    <i class="fas fa-angle-right"></i>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 mb-3">
-                        <div class="card text-white bg-success o-hidden h-100">
-                            <div class="card-body">
-                                <div class="card-body-icon">
-                                    <i class="fas fa-fw fa-shopping-cart"></i>
-                                </div>
-                                <div class="mr-5">123 New Orders!</div>
-                            </div>
-                            <a class="card-footer text-white clearfix small z-1" href="#">
-                                <span class="float-left">View Details</span>
-                                <span class="float-right">
-                                    <i class="fas fa-angle-right"></i>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 mb-3">
-                        <div class="card text-white bg-danger o-hidden h-100">
-                            <div class="card-body">
-                                <div class="card-body-icon">
-                                    <i class="fas fa-fw fa-life-ring"></i>
-                                </div>
-                                <div class="mr-5">13 New Tickets!</div>
-                            </div>
-                            <a class="card-footer text-white clearfix small z-1" href="#">
-                                <span class="float-left">View Details</span>
-                                <span class="float-right">
-                                    <i class="fas fa-angle-right"></i>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!--fin icon cards-->
-                <!-- Area Chart Example-->
-                <div class="card mb-3">
-                    <div class="card-header">
-                        <i class="fas fa-chart-area"></i>
-                        Análisis de Agendamiento Servicios
-                    </div>
-                    <div class="card-body">
-                        <canvas id="myAreaChart" width="100%" height="35"></canvas>
-                    </div>
-                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                 </div>
 
-                <div id="loading" style="display:none; text-align: center;">
-                    <br />
-                </div>                
-            </div>
-        </div>
-        <!-- /.container-fluid -->
-        <!-- Sticky Footer -->
-        <footer class="sticky-footer">
-            <div class="container my-auto">
-                <div class="copyright text-center my-auto">
-                    <span>Copyright © Your Website 2018</span>
+                    <!-- Area Chart Example-->
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            <i class="fas fa-chart-area"></i>
+                            Análisis de Agendamiento Servicios
+                        </div>
+                        <div class="card-body">
+                            <canvas id="myAreaChart" width="100%" height="35"></canvas>
+                            <div id="loading" style="display:none; text-align: center;">
+                                <br />
+                            </div>
+                        </div>
+
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    </div>
+
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            <i class="fas fa-chart-area"></i>
+                            Análisis de Agendamiento Consulta Médica
+                        </div>
+                        <div class="card-body">
+                            <canvas id="ChartCE" width="100%" height="35"></canvas>
+                            <div id="loading2" style="display:none; text-align: center;">
+                                <br />
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    </div>
+
+
+
+
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            <i class="fas fa-chart-area"></i>
+                            Análisis de Agendamiento Salud Oral
+                        </div>
+                        <div class="card-body">
+                            <canvas id="ChartSO" width="100%" height="35"></canvas>
+                            <div id="loading3" style="display:none; text-align: center;">
+                                <br />
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    </div>
+
+
+
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            <i class="fas fa-chart-area"></i>
+                            Análisis de Agendamiento Crecimiento y desarrollo
+                        </div>
+                        <div class="card-body">
+                            <canvas id="ChartCYD" width="100%" height="35"></canvas>
+                            <div id="loading4" style="display:none; text-align: center;">
+                                <br />
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    </div>
+
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            <i class="fas fa-chart-area"></i>
+                            Análisis de Agendamiento Control Prenatal
+                        </div>
+                        <div class="card-body">
+                            <canvas id="ChartCP" width="100%" height="35"></canvas>
+                            <div id="loading5" style="display:none; text-align: center;">
+                                <br />
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    </div>
                 </div>
+                <!-- /.container-fluid -->
+                <!-- Sticky Footer -->
+                <footer class="sticky-footer">
+                    <div class="container my-auto">
+                        <div class="copyright text-center my-auto">
+                            <span>Copyright © Your Website 2018</span>
+                        </div>
+                    </div>
+                </footer>
             </div>
-        </footer>
-    </div>
     <!-- /.content-wrapper -->
     </div>
     <!-- /#wrapper -->
@@ -293,8 +320,8 @@
     <!--<script src="~/vendor/datatables/jquery.dataTables.js"></script>
     <script src="~/vendor/datatables/dataTables.bootstrap4.js"></script>-->
 
-    <script src="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    
 
     <!-- Custom scripts for all pages-->
     <script src="~/js/sb-admin.min.js"></script>
@@ -308,16 +335,19 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-            CuantosEventosFecha()
-                //ChartAgenda();
-                //ChartAgendaEPS();
-                //ListarInasistenteFecha();
-                //ListarInasistenteUltimaFecha();
-                $("#buscar").click(function () {
-                    //$('#content').html('<div class="loading"><img src="~/images/cargando.png" /><br/>Un momento, por favor...</div>');
-                    //ListaEventoMedicoFecha();
-                });
-            });
+            $("#buscar").click(function () {
+                CuantosEventosFecha();
+                CuantosEventosFechaCE();
+                CuantosEventosFechaSO();
+                CuantosEventosFechaCYD();
+                CuantosEventosFechaCP();
+            });    
+            //ChartAgenda();
+            //ChartAgendaEPS();
+            //ListarInasistenteFecha();
+            //ListarInasistenteUltimaFecha();
+                
+         });
 
     </script>
 
